--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,32 +1,28 @@
-# SLATE Backend Dependencies
+# SLATE Backend Dependencies - LangGraph Version
 
 # Core FastAPI and Server
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic
-python-multipart==0.0.6
-websockets==12.0
-
-# LangChain and LangGraph
-langchain==0.1.1
-langchain-openai==0.0.5
-langgraph==0.0.19
-langchain-core==0.1.10
-
-# OpenAI
-openai==1.6.1
-tiktoken==0.5.2
+fastapi
+uvicorn[standard]
+python-multipart
+websockets
 
 # Environment and Configuration
-python-dotenv==1.0.0
+python-dotenv
 
 # HTTP and API
-httpx==0.25.2
-requests==2.31.0
+httpx
+requests
+
+# LangChain and LangGraph (minimal working versions)
+langchain-core
+langchain-openai
+langgraph
+
+# OpenAI
+openai
+
+# Basic utilities
+jsonschema
 
 # Blockchain and Crypto
-base58==2.1.1
-tronpy==0.4.0
-
-# Utilities and Data Processing
-jsonschema==4.20.0
+base58
