--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node ./node_modules/vite/bin/vite.js build",
     "lint": "eslint .",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": ">=20 <23",
+    "npm": ">=9"
   },
   "dependencies": {
     "axios": "^1.7.7",
